Rewrote '%s'.formatted('.') to String.format('%s', '.') and lowered the Java version to 11